src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Amendment %28URF%29</fullName>
        <description>Used for Retail URF Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Finalize and Approve</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Review Documentation</fullName>
        </values>
        <values>
            <fullName>Tracking Records</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Domestic%2FNon-US Retail</fullName>
        <description>Used for Non-US Retail Onboarding</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Finalize and Approve</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Review Documentation</fullName>
        </values>
        <values>
            <fullName>Tracking Records</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Onboarding</fullName>
        <description>Used for Onboarding Case Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Finalize and Approve</fullName>
        </values>
        <values>
            <fullName>Review Documentation</fullName>
        </values>
        <values>
            <fullName>Service</fullName>
        </values>
        <values>
            <fullName>Tracking Records</fullName>
        </values>
        <values>
            <fullName>Transition Account</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service Request</fullName>
        <description>Used for CSM Service Requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Termination</fullName>
        <description>Used for CSM Termination Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Transition Account</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Territory Management%2FUser Support</fullName>
        <description>User Support Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Internal Response</fullName>
        </values>
        <values>
            <fullName>Awaiting User Feedback</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated to L2</fullName>
        </values>
        <values>
            <fullName>Escalated to L3</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AML_Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AML Lawyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Type_Asset_Source__c</fullName>
        <label>Account Type/Asset Source</label>
        <picklist>
            <picklistValues>
                <fullName>Central Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual/Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance General Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Unit Linked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Seed Money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monetary Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Decommission Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sovereign Wealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subadvised 40-Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subadvised non-40-Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Employee Benefit Account (VEBA)/Health Savings Account (HSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Capital/Balance Sheet</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acknowledge_Status_Start__c</fullName>
        <label>Acknowledge Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Acknowledged_by_MFSC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acknowledged by MFSC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Funding_Date__c</fullName>
        <inlineHelpText>The Date the portfolio is funded at MFS</inlineHelpText>
        <label>Actual Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <inlineHelpText>Please briefly describe your request in order to help facilitate a response</inlineHelpText>
        <label>Additional Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_Documents_Needed__c</fullName>
        <label>Additional Documents Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Dodd-Frank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted under FINRA 5130/31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derivatives/Futures/Currency Forwards/Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Entity Identifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17a-7 Form</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Information_on_Opportunity__c</fullName>
        <label>Additional Info on this Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Documents_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Documents Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount ($)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved with G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved with G3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved with PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending with G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending with G4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized Signer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benchmark_Primary__c</fullName>
        <label>Benchmark - Primary</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_on_Custodian_Assets__c</fullName>
        <label>Bill on Custodian Assets</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Billing Contact Name)</relationshipLabel>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <label>Billing Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Currency</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Inception_Date__c</fullName>
        <label>Billing Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_at_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business at Risk</label>
        <referenceTo>Business_at_Risk__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFO_Onboarding_Retail_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field used for approval process on a retail onboarding case.</description>
        <label>CFO Acknowledgement</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesW47t</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Can_manual_reporting_be_ceased__c</fullName>
        <inlineHelpText>This includes attribution letters. Confirm reports and letter code where applicable</inlineHelpText>
        <label>Can manual reporting be ceased?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <defaultValue>$Label.Case_Origin_Internal</defaultValue>
        <label>Case Origin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Currency__c</fullName>
        <label>Cash Flow Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AUD-Australian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD-Canadian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR-Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP-British Pound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY-Japanese Yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRW-Korean Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD-New Zealand Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD-Singapore Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWD-Taiwan Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD-U.S.Dollar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Management__c</fullName>
        <label>Cash Management</label>
        <picklist>
            <picklistValues>
                <fullName>MFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Asset_Type__c</fullName>
        <label>Client Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Total Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Client_Investment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Investment</label>
        <referenceTo>Account__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Legal_Name__c</fullName>
        <label>Client Legal Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Reference__c</fullName>
        <inlineHelpText>Use of Client Name - Confidentiality</inlineHelpText>
        <label>Client Reference</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Service_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Service Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Service_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Service_Manager__c</fullName>
        <description>Note: check the workflow rule before making changes to this field: WF - &quot;Populate Case Contact Names&quot; and then remove this description as well.</description>
        <label>Client Service Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed - Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Closed Per Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed – With Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of User Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved by L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved by L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved by L3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved with Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed – Not Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Status_Start__c</fullName>
        <label>Closed Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closing_Termination_Date__c</fullName>
        <label>Closing/Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Heads_of_Global_Distribution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for Retail Onboarding approval process (Amendments)</description>
        <label>Co-Heads of Global Distribution</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesW48D</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_LOE__c</fullName>
        <description>Used to capture level of estimate for code required for enhancement.</description>
        <label>Code LOE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliance_AML_KYC_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance - AML/KYC Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Compliance_AML_KYC_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_AML_KYC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance - AML/KYC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Code_of_Ethics_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance - Code of Ethics Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configuration_LOE__c</fullName>
        <description>Used to capture the configuration level of effort (in hours) for the suggested enhancement.</description>
        <label>Configuration LOE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Consultant Name)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Finance_Billing_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corp Finance - Billing Group</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Corporate_Finance_Billing_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Assets__c</fullName>
        <label>Current Assets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custodian_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custodian Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Custodian Contact)</relationshipLabel>
        <relationshipName>Cases3_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custodian_Location__c</fullName>
        <formula>$Organization.Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custodian Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custodian_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custodian Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Custodian Name)</relationshipLabel>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Case_Approved__c</fullName>
        <label>Date Case Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Client_executes_the_agreement__c</fullName>
        <label>Date Client Executes the Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_agreement_was_first_sent_to_client__c</fullName>
        <label>Date Agreement Was First Sent to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delegated__c</fullName>
        <label>Delegated?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_LOE__c</fullName>
        <description>Used to capture the design level of effort (in hours) for the suggested enhancement.</description>
        <label>Design LOE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Directed_Trading__c</fullName>
        <label>Directed Trading</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>URF_Fee__r.Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Bug Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not an Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Lawyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_List_Email_Formula__c</fullName>
        <formula>Distribution_List__r.Email_Address__c</formula>
        <label>Distribution List Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution List</label>
        <referenceTo>Distribution_List__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Requester__r.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dodd_Frank_Form_Received_Back__c</fullName>
        <label>Dodd Frank Form Received Back</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_Client_Require_MFN_Clause__c</fullName>
        <formula>TEXT(URF_Fee__r.Does_Clinet_require_MFS_clause__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Does Client Require MFN Clause?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_urf__c</fullName>
        <formula>URF_Fee__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_In_Date__c</fullName>
        <formula>IF( (Due_Date__c  &gt;=  TODAY()) &amp;&amp; (Due_Date__c - Today() = 0 || Due_Date__c - Today() = 1), &apos;Due in &apos;+ Text(Due_Date__c - Today()) +&apos; day&apos;, IF( (Due_Date__c  &gt;=  TODAY()) &amp;&amp; (Due_Date__c - Today() &lt;&gt; 0 || Due_Date__c - Today() &lt;&gt; 1), &apos;Due in &apos;+ Text(Due_Date__c - Today()) +&apos; days&apos;, IF((Due_Date__c  &lt;  TODAY()) &amp;&amp; (Today() - Due_Date__c = 1), &apos;Past due by &apos;+ Text(Today() - Due_Date__c) +&apos; day&apos;,IF(Due_Date__c  &lt;  TODAY(), &apos;Past due by &apos;+ Text(Today() - Due_Date__c) +&apos; days&apos;,null) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_In_Range__c</fullName>
        <formula>IF((Due_Date__c -TODAY())&gt;365,&apos;More than a year&apos;,IF((Due_Date__c  -TODAY())&gt;180,&apos;More than 6 months&apos;,IF((Due_Date__c -TODAY())&gt;90,&apos;More than 3 months&apos;,IF((Due_Date__c  -TODAY())&gt;30,&apos;More than a month&apos;,IF((Due_Date__c -TODAY())&gt;15,&apos;With in a month&apos;,IF((Due_Date__c  -TODAY())&gt;7,&apos;Fortnight&apos;,
IF((Due_Date__c -TODAY())&gt;0,&apos;In a week&apos;,&apos;Past Due&apos;)
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due In Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_In__c</fullName>
        <label>Reminder Notification in (days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Acknowledged__c</fullName>
        <formula>IF(ISPICKVAL(Status,&apos;Acknowledged&apos;),NOW()-Acknowledge_Status_Start__c,In_Progress_Status_Start__c-Acknowledge_Status_Start__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration: Acknowledged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Closed__c</fullName>
        <formula>IF(ISPICKVAL(Status,&apos;Closed&apos;), Now()-Closed_Status_Start__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration: Closed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_In_Progress__c</fullName>
        <formula>IF(ISPICKVAL(Status,&apos;In Progress&apos;),NOW()-In_Progress_Status_Start__c,Pending_Status_Start__c-In_Progress_Status_Start__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration: In Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_New__c</fullName>
        <formula>IF(ISPICKVAL(Status,&apos;New&apos;),NOW()-New_Status_Start__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration: New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Pending__c</fullName>
        <formula>IF(ISPICKVAL(Status,&apos;Pending&apos;),NOW()-Pending_Status_Start__c,Closed_Status_Start__c-Pending_Status_Start__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERISA__c</fullName>
        <label>ERISA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Fee_Schedule__c</fullName>
        <label>Effective Fee Schedule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Fee__c</fullName>
        <formula>URF_Fee__r.Effective_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_date_of_the_agreement__c</fullName>
        <label>Effective Date of the Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ends_On__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Ends On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ends__c</fullName>
        <label>Recurrence Ends</label>
        <picklist>
            <picklistValues>
                <fullName>After</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>